Add additional info

--- a/examples/matrix_mul.ipynb
+++ b/examples/matrix_mul.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,13 @@
     "import matplotlib.pyplot as plt\n",
     "import time\n",
     "\n",
-    "tf.initialize(tf.cpu, \"H:/cl_compile.bat /O2 /fp:fast /openmp\")\n",
+    "tf.initialize(tf.cpu, \"H:/cl_compile.bat /O1 /fp:fast /openmp\")\n",
+    "\n",
+    "S = 512\n",
     "\n",
     "def matmul():\n",
-    "    A = tf.input([-1, -1], tf.float32)\n",
-    "    B = tf.input([-1, -1], tf.float32)\n",
+    "    A = tf.input([S, S], tf.float32)\n",
+    "    B = tf.input([S, S], tf.float32)\n",
     "\n",
     "    N, M = A.shape\n",
     "    K = B.shape[1]\n",
@@ -33,35 +35,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "   0.0000000e+00  2.3841858e-07  0.0000000e+00  0.0000000e+00]\n",
-      " [ 0.0000000e+00  1.1920929e-07 -1.1920929e-07  0.0000000e+00\n",
-      "   1.1920929e-07  0.0000000e+00 -5.9604645e-08  0.0000000e+00]\n",
-      " [ 0.0000000e+00  0.0000000e+00 -2.3841858e-07  0.0000000e+00\n",
-      "   0.0000000e+00  0.0000000e+00 -1.1920929e-07  0.0000000e+00]\n",
-      " [ 0.0000000e+00  1.1920929e-07 -1.1920929e-07  1.1920929e-07\n",
-      "   2.3841858e-07  0.0000000e+00  1.1920929e-07 -1.1920929e-07]\n",
-      " [ 2.3841858e-07  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "  -1.1920929e-07  0.0000000e+00  0.0000000e+00  0.0000000e+00]\n",
-      " [-2.3841858e-07  0.0000000e+00  1.1920929e-07  0.0000000e+00\n",
-      "  -1.1920929e-07  0.0000000e+00  5.9604645e-08  0.0000000e+00]\n",
-      " [-4.7683716e-07  2.3841858e-07  2.3841858e-07  5.9604645e-08\n",
-      "   2.3841858e-07  2.3841858e-07  0.0000000e+00  1.1920929e-07]\n",
-      " [ 0.0000000e+00  0.0000000e+00  0.0000000e+00 -5.9604645e-08\n",
-      "   0.0000000e+00  1.1920929e-07  5.9604645e-08  0.0000000e+00]]\n"
+      "[[-7.6293945e-05  4.5776367e-05  3.0517578e-05 ... -3.0517578e-05\n",
+      "  -5.3405762e-05  1.5258789e-05]\n",
+      " [-1.5258789e-05  4.5776367e-05 -3.8146973e-05 ... -1.5258789e-05\n",
+      "  -3.0517578e-05 -8.3923340e-05]\n",
+      " [-4.5776367e-05 -3.0517578e-05  3.0517578e-05 ... -6.1035156e-05\n",
+      "  -1.5258789e-05 -6.1035156e-05]\n",
+      " ...\n",
+      " [-7.6293945e-05  7.6293945e-06  3.8146973e-05 ... -1.5258789e-05\n",
+      "   5.3405762e-05 -3.0517578e-05]\n",
+      " [-1.5258789e-05 -3.0517578e-05 -2.2888184e-05 ...  0.0000000e+00\n",
+      "   1.5258789e-05  0.0000000e+00]\n",
+      " [ 0.0000000e+00  4.5776367e-05 -1.5258789e-05 ... -1.5258789e-05\n",
+      "   1.5258789e-05 -4.5776367e-05]]\n"
      ]
     }
    ],
    "source": [
-    "Anp = np.random.rand(8, 8).astype(np.float32)\n",
-    "Bnp = np.random.rand(8, 8).astype(np.float32)\n",
+    "Anp = np.random.rand(S, S).astype(np.float32)\n",
+    "Bnp = np.random.rand(S, S).astype(np.float32)\n",
     "\n",
     "A = tf.memory(np.transpose(Anp))\n",
     "B = tf.memory(np.transpose(Bnp))\n",
@@ -77,22 +76,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost:  33.77503323554993\n",
-      "Numpy:  0.33500027656555176\n",
-      "TF/NP:  100.8209114983848\n"
+      "TensorFrost:  14.598998069763184\n",
+      "Numpy:  0.1270008087158203\n",
+      "TF/NP:  114.95200871067057\n"
      ]
     }
    ],
    "source": [
-    "Anp = np.random.rand(1024, 1024).astype(np.float32)\n",
-    "Bnp = np.random.rand(1024, 1024).astype(np.float32)\n",
+    "Anp = np.random.rand(S, S).astype(np.float32)\n",
+    "Bnp = np.random.rand(S, S).astype(np.float32)\n",
     "\n",
     "A = tf.memory(np.transpose(Anp))\n",
     "B = tf.memory(np.transpose(Bnp))\n",
