Use c-order indexing just as numpy

--- a/examples/mandelbrot.ipynb
+++ b/examples/mandelbrot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +12,8 @@
       "TensorProgram:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 1\n",
-      "  Lines of generated code: 181\n",
-      "  IR size: 554\n",
+      "  Lines of generated code: 180\n",
+      "  IR size: 519\n",
       "\n",
       "(2048, 2048, 3)\n"
      ]
@@ -30,9 +30,9 @@
     "S = 2048\n",
     "\n",
     "def mandelbrot():\n",
-    "    canvas = tf.zeros([3, S, S], tf.float32)\n",
+    "    canvas = tf.zeros([S, S, 3], tf.float32)\n",
     "    i, j = tf.indices([S, S])\n",
-    "    x, y = tf.float(i), tf.float(j)\n",
+    "    y, x = tf.float(i), tf.float(j)\n",
     "\n",
     "    z_re = tf.zeros([S, S], tf.float32)\n",
     "    z_im = tf.zeros([S, S], tf.float32)\n",
@@ -45,9 +45,9 @@
     "\n",
     "    z_mag = tf.sqrt(z_re*z_re + z_im*z_im)\n",
     "\n",
-    "    canvas[0, i, j] = tf.abs(z_re)*z_mag\n",
-    "    canvas[1, i, j] = tf.abs(z_im)*z_mag\n",
-    "    canvas[2, i, j] = z_mag\n",
+    "    canvas[i, j, 0] = tf.abs(z_re)*z_mag\n",
+    "    canvas[i, j, 1] = tf.abs(z_im)*z_mag\n",
+    "    canvas[i, j, 2] = z_mag\n",
     "\n",
     "    return [canvas]\n",
     "\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
