Update examples to use proper arguments

--- a/examples/matrix_mul.ipynb
+++ b/examples/matrix_mul.ipynb
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "import time\n",
     "\n",
-    "tf.initialize(tf.cpu, \"H:/cl_compile.bat /O2 /fp:fast /openmp\")\n",
+    "tf.initialize(tf.cpu, \"/O2 /fp:fast /openmp\")\n",
     "\n",
     "S = 512\n",
     "\n",
