--- a/examples/wave_simulation.ipynb
+++ b/examples/wave_simulation.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "TensorProgram:\n",
       "  Kernel count: 3\n",
       "  Intermediate buffers: 7\n",
@@ -31,7 +32,7 @@
     "\n",
     "def WaveIteration(u, v, dt):\n",
     "    i,j = u.indices\n",
-    "    laplacian = u[i-1, j] + u[i+1, j] + u[i, j-1] + u[i, j+1] - u * 4.0\n",
+    "    laplacian = u[i-1, j] + u[i+1, j] + u[i, j-1] + u[i, j+1] - u[i,j] * 4.0\n",
     "    force = laplacian - 0.1 * tf.sin(2.0*np.pi*u)\n",
     "    v_new = v + dt*force\n",
     "    u_new = u + dt*v_new\n",
@@ -50,7 +51,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of operations:\n",
+      "\n",
+      "mem0 = memory(type=int)\n",
+      "mem1 = memory(type=int)\n",
+      "\n",
+      "mem2 = memory(shape=[mem0,mem1], memory_type=input, type=float)\n",
+      "mem3 = memory(type=int)\n",
+      "mem4 = memory(type=int)\n",
+      "\n",
+      "mem5 = memory(shape=[mem3,mem4], memory_type=input, type=float)\n",
+      "\n",
+      "mem6 = memory(shape=[mem0,mem1], type=float)\n",
+      "\n",
+      "var5_0 = dim_id(shape=[mem0,mem1], data=[0], type=int)\n",
+      "var5_1 = dim_id(shape=[mem0,mem1], data=[1], type=int)\n",
+      "var5_3 = sub(inputs=[var5_0,1], shape=[mem0,mem1], cost=1.000000, type=int)\n",
+      "var5_5 = add(inputs=[var5_0,1], shape=[mem0,mem1], cost=1.000000, type=int)\n",
+      "var5_7 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var5_9 = clamp(inputs=[var5_3,0,var5_7], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var5_10 = mul(inputs=[var5_9,mem1], shape=[mem0,mem1], cost=7.000000, type=int)\n",
+      "var5_12 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var5_14 = clamp(inputs=[var5_1,0,var5_12], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_15 = add(inputs=[var5_10,var5_14], shape=[mem0,mem1], cost=13.000000, type=int)\n",
+      "var5_16 = load(memory=[mem2], indices=[var5_15], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var5_18 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var5_20 = clamp(inputs=[var5_5,0,var5_18], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var5_21 = mul(inputs=[var5_20,mem1], shape=[mem0,mem1], cost=7.000000, type=int)\n",
+      "var5_23 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var5_25 = clamp(inputs=[var5_1,0,var5_23], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_26 = add(inputs=[var5_21,var5_25], shape=[mem0,mem1], cost=13.000000, type=int)\n",
+      "var5_27 = load(memory=[mem2], indices=[var5_26], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var5_28 = add(inputs=[var5_16,var5_27], shape=[mem0,mem1], cost=283.000000, type=float)\n",
+      "var5_30 = sub(inputs=[var5_1,1], shape=[mem0,mem1], cost=1.000000, type=int)\n",
+      "var5_32 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var5_34 = clamp(inputs=[var5_0,0,var5_32], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_35 = mul(inputs=[var5_34,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var5_37 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var5_39 = clamp(inputs=[var5_30,0,var5_37], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var5_40 = add(inputs=[var5_35,var5_39], shape=[mem0,mem1], cost=13.000000, type=int)\n",
+      "var5_41 = load(memory=[mem2], indices=[var5_40], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var5_42 = add(inputs=[var5_28,var5_41], shape=[mem0,mem1], cost=425.000000, type=float)\n",
+      "var5_44 = add(inputs=[var5_1,1], shape=[mem0,mem1], cost=1.000000, type=int)\n",
+      "var5_46 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var5_48 = clamp(inputs=[var5_0,0,var5_46], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_49 = mul(inputs=[var5_48,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var5_51 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var5_53 = clamp(inputs=[var5_44,0,var5_51], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var5_54 = add(inputs=[var5_49,var5_53], shape=[mem0,mem1], cost=13.000000, type=int)\n",
+      "var5_55 = load(memory=[mem2], indices=[var5_54], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var5_56 = add(inputs=[var5_42,var5_55], shape=[mem0,mem1], cost=567.000000, type=float)\n",
+      "var5_59 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var5_61 = clamp(inputs=[var5_0,0,var5_59], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_62 = mul(inputs=[var5_61,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var5_64 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var5_66 = clamp(inputs=[var5_1,0,var5_64], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_67 = add(inputs=[var5_62,var5_66], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "var5_68 = load(memory=[mem2], indices=[var5_67], shape=[mem0,mem1], cost=140.000000, type=float)\n",
+      "var5_69 = mul(inputs=[4.000000f,var5_68], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var5_70 = sub(inputs=[var5_56,var5_69], shape=[mem0,mem1], cost=709.000000, type=float)\n",
+      "var5_73 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var5_75 = clamp(inputs=[var5_0,0,var5_73], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_76 = mul(inputs=[var5_75,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var5_78 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var5_80 = clamp(inputs=[var5_1,0,var5_78], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_81 = add(inputs=[var5_76,var5_80], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "var5_82 = load(memory=[mem2], indices=[var5_81], shape=[mem0,mem1], cost=140.000000, type=float)\n",
+      "var5_83 = mul(inputs=[6.283185f,var5_82], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var5_84 = sin(inputs=[var5_83], shape=[mem0,mem1], cost=143.000000, type=float)\n",
+      "var5_86 = mul(inputs=[0.100000f,var5_84], shape=[mem0,mem1], cost=144.000000, type=float)\n",
+      "var5_87 = sub(inputs=[var5_70,var5_86], shape=[mem0,mem1], cost=854.000000, type=float)\n",
+      "var5_89 = mul(inputs=[0.200000f,var5_87], shape=[mem0,mem1], cost=855.000000, type=float)\n",
+      "var5_91 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var5_93 = clamp(inputs=[var5_0,0,var5_91], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_94 = mul(inputs=[var5_93,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var5_96 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var5_98 = clamp(inputs=[var5_1,0,var5_96], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var5_99 = add(inputs=[var5_94,var5_98], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "store(memory=[mem6], inputs=[var5_89], indices=[var5_99], shape=[mem0,mem1], cost=995.000000, )\n",
+      "\n",
+      "mem7 = memory(shape=[mem3,mem4], memory_type=output, type=float)\n",
+      "\n",
+      "var7_0 = dim_id(shape=[mem0,mem1], data=[1], type=int)\n",
+      "var7_1 = dim_id(shape=[mem0,mem1], data=[0], type=int)\n",
+      "var7_3 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var7_5 = clamp(inputs=[var7_1,0,var7_3], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var7_6 = mul(inputs=[var7_5,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var7_8 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var7_10 = clamp(inputs=[var7_0,0,var7_8], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var7_11 = add(inputs=[var7_6,var7_10], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "var7_12 = load(memory=[mem6], indices=[var7_11], shape=[mem0,mem1], cost=140.000000, type=float)\n",
+      "var7_14 = sub(inputs=[mem3,1], cost=1.000000, type=int)\n",
+      "var7_16 = clamp(inputs=[var7_1,0,var7_14], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var7_17 = mul(inputs=[var7_16,mem4], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var7_19 = sub(inputs=[mem4,1], cost=1.000000, type=int)\n",
+      "var7_21 = clamp(inputs=[var7_0,0,var7_19], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var7_22 = add(inputs=[var7_17,var7_21], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "var7_23 = load(memory=[mem5], indices=[var7_22], shape=[mem3,mem4], cost=140.000000, type=float)\n",
+      "var7_24 = add(inputs=[var7_23,var7_12], shape=[mem3,mem4], cost=281.000000, type=float)\n",
+      "var7_26 = sub(inputs=[mem3,1], cost=1.000000, type=int)\n",
+      "var7_28 = clamp(inputs=[var7_1,0,var7_26], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var7_29 = mul(inputs=[var7_28,mem4], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var7_31 = sub(inputs=[mem4,1], cost=1.000000, type=int)\n",
+      "var7_33 = clamp(inputs=[var7_0,0,var7_31], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var7_34 = add(inputs=[var7_29,var7_33], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "store(memory=[mem7], inputs=[var7_24], indices=[var7_34], shape=[mem3,mem4], cost=421.000000, )\n",
+      "\n",
+      "mem8 = memory(shape=[mem0,mem1], memory_type=output, type=float)\n",
+      "\n",
+      "var9_0 = dim_id(shape=[mem0,mem1], data=[0], type=int)\n",
+      "var9_1 = dim_id(shape=[mem0,mem1], data=[1], type=int)\n",
+      "var9_3 = sub(inputs=[var9_0,1], shape=[mem0,mem1], cost=1.000000, type=int)\n",
+      "var9_5 = add(inputs=[var9_0,1], shape=[mem0,mem1], cost=1.000000, type=int)\n",
+      "var9_7 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var9_9 = clamp(inputs=[var9_3,0,var9_7], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_10 = mul(inputs=[var9_9,mem1], shape=[mem0,mem1], cost=7.000000, type=int)\n",
+      "var9_12 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var9_14 = clamp(inputs=[var9_1,0,var9_12], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_15 = add(inputs=[var9_10,var9_14], shape=[mem0,mem1], cost=13.000000, type=int)\n",
+      "var9_16 = load(memory=[mem2], indices=[var9_15], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var9_18 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var9_20 = clamp(inputs=[var9_5,0,var9_18], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_21 = mul(inputs=[var9_20,mem1], shape=[mem0,mem1], cost=7.000000, type=int)\n",
+      "var9_23 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var9_25 = clamp(inputs=[var9_1,0,var9_23], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_26 = add(inputs=[var9_21,var9_25], shape=[mem0,mem1], cost=13.000000, type=int)\n",
+      "var9_27 = load(memory=[mem2], indices=[var9_26], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var9_28 = add(inputs=[var9_16,var9_27], shape=[mem0,mem1], cost=283.000000, type=float)\n",
+      "var9_30 = sub(inputs=[var9_1,1], shape=[mem0,mem1], cost=1.000000, type=int)\n",
+      "var9_32 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var9_34 = clamp(inputs=[var9_0,0,var9_32], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_35 = mul(inputs=[var9_34,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_37 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var9_39 = clamp(inputs=[var9_30,0,var9_37], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_40 = add(inputs=[var9_35,var9_39], shape=[mem0,mem1], cost=13.000000, type=int)\n",
+      "var9_41 = load(memory=[mem2], indices=[var9_40], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var9_42 = add(inputs=[var9_28,var9_41], shape=[mem0,mem1], cost=425.000000, type=float)\n",
+      "var9_44 = add(inputs=[var9_1,1], shape=[mem0,mem1], cost=1.000000, type=int)\n",
+      "var9_46 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var9_48 = clamp(inputs=[var9_0,0,var9_46], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_49 = mul(inputs=[var9_48,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_51 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var9_53 = clamp(inputs=[var9_44,0,var9_51], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_54 = add(inputs=[var9_49,var9_53], shape=[mem0,mem1], cost=13.000000, type=int)\n",
+      "var9_55 = load(memory=[mem2], indices=[var9_54], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var9_56 = add(inputs=[var9_42,var9_55], shape=[mem0,mem1], cost=567.000000, type=float)\n",
+      "var9_59 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var9_61 = clamp(inputs=[var9_0,0,var9_59], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_62 = mul(inputs=[var9_61,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_64 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var9_66 = clamp(inputs=[var9_1,0,var9_64], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_67 = add(inputs=[var9_62,var9_66], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "var9_68 = load(memory=[mem2], indices=[var9_67], shape=[mem0,mem1], cost=140.000000, type=float)\n",
+      "var9_69 = mul(inputs=[4.000000f,var9_68], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var9_70 = sub(inputs=[var9_56,var9_69], shape=[mem0,mem1], cost=709.000000, type=float)\n",
+      "var9_73 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var9_75 = clamp(inputs=[var9_0,0,var9_73], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_76 = mul(inputs=[var9_75,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_78 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var9_80 = clamp(inputs=[var9_1,0,var9_78], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_81 = add(inputs=[var9_76,var9_80], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "var9_82 = load(memory=[mem2], indices=[var9_81], shape=[mem0,mem1], cost=140.000000, type=float)\n",
+      "var9_83 = mul(inputs=[6.283185f,var9_82], shape=[mem0,mem1], cost=141.000000, type=float)\n",
+      "var9_84 = sin(inputs=[var9_83], shape=[mem0,mem1], cost=143.000000, type=float)\n",
+      "var9_86 = mul(inputs=[0.100000f,var9_84], shape=[mem0,mem1], cost=144.000000, type=float)\n",
+      "var9_87 = sub(inputs=[var9_70,var9_86], shape=[mem0,mem1], cost=854.000000, type=float)\n",
+      "var9_89 = mul(inputs=[0.200000f,var9_87], shape=[mem0,mem1], cost=855.000000, type=float)\n",
+      "var9_91 = sub(inputs=[mem3,1], cost=1.000000, type=int)\n",
+      "var9_93 = clamp(inputs=[var9_0,0,var9_91], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_94 = mul(inputs=[var9_93,mem4], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_96 = sub(inputs=[mem4,1], cost=1.000000, type=int)\n",
+      "var9_98 = clamp(inputs=[var9_1,0,var9_96], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_99 = add(inputs=[var9_94,var9_98], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "var9_100 = load(memory=[mem5], indices=[var9_99], shape=[mem3,mem4], cost=140.000000, type=float)\n",
+      "var9_101 = add(inputs=[var9_100,var9_89], shape=[mem3,mem4], cost=996.000000, type=float)\n",
+      "var9_103 = mul(inputs=[0.200000f,var9_101], shape=[mem3,mem4], cost=997.000000, type=float)\n",
+      "var9_105 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var9_107 = clamp(inputs=[var9_0,0,var9_105], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_108 = mul(inputs=[var9_107,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_110 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var9_112 = clamp(inputs=[var9_1,0,var9_110], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_113 = add(inputs=[var9_108,var9_112], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "var9_114 = load(memory=[mem2], indices=[var9_113], shape=[mem0,mem1], cost=140.000000, type=float)\n",
+      "var9_115 = add(inputs=[var9_114,var9_103], shape=[mem0,mem1], cost=1138.000000, type=float)\n",
+      "var9_117 = sub(inputs=[mem0,1], cost=1.000000, type=int)\n",
+      "var9_119 = clamp(inputs=[var9_0,0,var9_117], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_120 = mul(inputs=[var9_119,mem1], shape=[mem0,mem1], cost=6.000000, type=int)\n",
+      "var9_122 = sub(inputs=[mem1,1], cost=1.000000, type=int)\n",
+      "var9_124 = clamp(inputs=[var9_1,0,var9_122], shape=[mem0,mem1], cost=5.000000, type=int)\n",
+      "var9_125 = add(inputs=[var9_120,var9_124], shape=[mem0,mem1], cost=12.000000, type=int)\n",
+      "store(memory=[mem8], inputs=[var9_115], indices=[var9_125], shape=[mem0,mem1], cost=1278.000000, )\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.list_operations()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,16 +266,16 @@
      "output_type": "stream",
      "text": [
       "Used memory: 262144\n",
-      "Iterations per second: 2777.795144177914\n",
-      "Iterations per second: 4761.709277507834\n",
-      "Iterations per second: 4000.0610360875867\n",
-      "Iterations per second: 4762.033651990281\n",
-      "Iterations per second: 4347.78065719913\n",
-      "Iterations per second: 4762.141786638812\n",
-      "Iterations per second: 4761.817397425127\n",
-      "Iterations per second: 4761.925522252498\n",
-      "Iterations per second: 3845.7978030844843\n",
-      "Iterations per second: 3030.4132016444255\n",
+      "Iterations per second: 970.9149411451522\n",
+      "Iterations per second: 2000.0019073504518\n",
+      "Iterations per second: 1999.9828340096415\n",
+      "Iterations per second: 2173.9466659755876\n",
+      "Iterations per second: 2325.556535094285\n",
+      "Iterations per second: 2438.988422331932\n",
+      "Iterations per second: 2325.6210078069553\n",
+      "Iterations per second: 2564.1316574558614\n",
+      "Iterations per second: 2325.556535094285\n",
+      "Iterations per second: 2439.0309712385006\n",
       "Used memory: 393220\n"
      ]
     }
@@ -122,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +340,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
