Improve python build process, upload to PyPI

--- a/examples/fluid_simulation.ipynb
+++ b/examples/fluid_simulation.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "TensorProgram:\n",
       "  Kernel count: 29\n",
       "  Intermediate buffers: 37\n",
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,33 +276,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 250, IPS: 107.11221574033999\n",
-      "Iteration: 500, IPS: 135.79575726321903\n",
-      "Iteration: 750, IPS: 154.41631036415455\n",
-      "Iteration: 1000, IPS: 151.24015874378082\n",
-      "Iteration: 1250, IPS: 147.40561031339942\n",
-      "Iteration: 1500, IPS: 147.57971330654524\n",
-      "Iteration: 1750, IPS: 149.34286779620655\n",
-      "Iteration: 2000, IPS: 155.76328430079312\n",
-      "Iteration: 2250, IPS: 150.96619279051544\n",
-      "Iteration: 2500, IPS: 147.14541052558607\n",
-      "Iteration: 2750, IPS: 148.45601362553288\n",
-      "Iteration: 3000, IPS: 151.8831200340101\n",
-      "Iteration: 3250, IPS: 147.4059004195949\n",
-      "Iteration: 3500, IPS: 153.65700614905862\n",
-      "Iteration: 3750, IPS: 159.13434761164018\n",
-      "Iteration: 4000, IPS: 144.7596590905169\n",
-      "Iteration: 4250, IPS: 147.3188162579293\n",
-      "Iteration: 4500, IPS: 144.5922621374579\n",
-      "Iteration: 4750, IPS: 159.43879180156273\n",
-      "Iteration: 5000, IPS: 163.93439034819266\n",
+      "Iteration: 250, IPS: 114.67885794479321\n",
+      "Iteration: 500, IPS: 155.56941921250638\n",
+      "Iteration: 750, IPS: 133.9763219604177\n",
+      "Iteration: 1000, IPS: 146.28448980616793\n",
+      "Iteration: 1250, IPS: 161.81211495250074\n",
+      "Iteration: 1500, IPS: 151.69916062988275\n",
+      "Iteration: 1750, IPS: 159.13432346104284\n",
+      "Iteration: 2000, IPS: 159.846558426047\n",
+      "Iteration: 2250, IPS: 156.73980910071353\n",
+      "Iteration: 2500, IPS: 158.02776354852335\n",
+      "Iteration: 2750, IPS: 162.12710183673522\n",
+      "Iteration: 3000, IPS: 155.47249463150945\n",
+      "Iteration: 3250, IPS: 160.25646511934994\n",
+      "Iteration: 3500, IPS: 160.87512177908698\n",
+      "Iteration: 3750, IPS: 160.15378536549454\n",
+      "Iteration: 4000, IPS: 160.77172192816408\n",
+      "Iteration: 4250, IPS: 160.97853115012015\n",
+      "Iteration: 4500, IPS: 158.83118415553756\n",
+      "Iteration: 4750, IPS: 157.52989395708948\n",
+      "Iteration: 5000, IPS: 162.9724518030503\n",
       "Used memory: 33.0 MB\n"
      ]
     }
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +403,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_36800\\1352085110.py:30: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_656\\1352085110.py:30: RuntimeWarning: divide by zero encountered in log10\n",
       "  plt.imshow(np.log10(np.abs(RES.numpy)), cmap='gist_rainbow')\n"
      ]
     },
