Refactor syntax and kernel generation
+bug fixes

--- a/examples/fluid_simulation.ipynb
+++ b/examples/fluid_simulation.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "TensorProgram:\n",
-      "  Kernel count: 48\n",
+      "  Kernel count: 47\n",
       "  Intermediate buffers: 56\n",
-      "  Lines of generated code: 1007\n",
-      "  IR size: 5382\n",
+      "  Lines of generated code: 997\n",
+      "  IR size: 5344\n",
       "\n"
      ]
     }
@@ -258,12 +259,12 @@
     "    return [vx, vy, pressure, canvas, div, density, Residual(pressure, div)]\n",
     "\n",
     "\n",
-    "fluid = tf.program(FluidTest)"
+    "fluid = tf.compile(FluidTest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,45 +273,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "VX = tf.memory(np.zeros((N, M)))\n",
-    "VY = tf.memory(np.zeros((N, M)))\n",
-    "PRESSURE = tf.memory(np.zeros((N, M)))\n",
-    "DENSITY = tf.memory(np.zeros((N, M)))"
+    "VX = tf.tensor(np.zeros((N, M)))\n",
+    "VY = tf.tensor(np.zeros((N, M)))\n",
+    "PRESSURE = tf.tensor(np.zeros((N, M)))\n",
+    "DENSITY = tf.tensor(np.zeros((N, M)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 250, IPS: 103.54058447361254\n",
-      "Iteration: 500, IPS: 116.71330222614071\n",
-      "Iteration: 750, IPS: 115.63373944649804\n",
-      "Iteration: 1000, IPS: 125.94454565720392\n",
-      "Iteration: 1250, IPS: 126.51824463561103\n",
-      "Iteration: 1500, IPS: 127.29107325121905\n",
-      "Iteration: 1750, IPS: 108.60130415689653\n",
-      "Iteration: 2000, IPS: 106.15707942494873\n",
-      "Iteration: 2250, IPS: 109.84184967600837\n",
-      "Iteration: 2500, IPS: 107.80508813416746\n",
-      "Iteration: 2750, IPS: 106.83761075638705\n",
-      "Iteration: 3000, IPS: 125.94451540279266\n",
-      "Iteration: 3250, IPS: 131.85656303211144\n",
-      "Iteration: 3500, IPS: 137.51365528999048\n",
-      "Iteration: 3750, IPS: 143.43076571431072\n",
-      "Iteration: 4000, IPS: 136.83629744815212\n",
-      "Iteration: 4250, IPS: 138.7348090771635\n",
-      "Iteration: 4500, IPS: 137.06141239489125\n",
-      "Iteration: 4750, IPS: 123.76236279867973\n",
-      "Iteration: 5000, IPS: 118.03586792062666\n",
+      "Iteration: 250, IPS: 91.14120421616379\n",
+      "Iteration: 500, IPS: 139.8210020858955\n",
+      "Iteration: 750, IPS: 139.04337401256194\n",
+      "Iteration: 1000, IPS: 141.72338006779793\n",
+      "Iteration: 1250, IPS: 128.6008226667388\n",
+      "Iteration: 1500, IPS: 140.1344979846685\n",
+      "Iteration: 1750, IPS: 134.19216922268117\n",
+      "Iteration: 2000, IPS: 121.30027711373694\n",
+      "Iteration: 2250, IPS: 108.143675347855\n",
+      "Iteration: 2500, IPS: 123.94645759275718\n",
+      "Iteration: 2750, IPS: 148.10426858248994\n",
+      "Iteration: 3000, IPS: 150.33071794524776\n",
+      "Iteration: 3250, IPS: 146.79977975329064\n",
+      "Iteration: 3500, IPS: 130.7509573680524\n",
+      "Iteration: 3750, IPS: 125.50203158520138\n",
+      "Iteration: 4000, IPS: 130.41201738302883\n",
+      "Iteration: 4250, IPS: 124.87517853117181\n",
+      "Iteration: 4500, IPS: 123.3349227898184\n",
+      "Iteration: 4750, IPS: 123.70117284042372\n",
+      "Iteration: 5000, IPS: 129.7353047216269\n",
       "Used memory: 33.625 MB\n"
      ]
     }
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +412,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_21180\\1352085110.py:30: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_49548\\1352085110.py:30: RuntimeWarning: divide by zero encountered in log10\n",
       "  plt.imshow(np.log10(np.abs(RES.numpy)), cmap='gist_rainbow')\n"
      ]
     },
