--- a/examples/mandelbrot.ipynb
+++ b/examples/mandelbrot.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "    return [canvas]\n",
     "\n",
-    "mand = tf.program(mandelbrot)\n",
+    "mand = tf.compile(mandelbrot)\n",
     "res = mand()\n",
     "resnp = res[0].numpy\n",
     "print(resnp.shape)"
