Update examples and readme

--- a/examples/matrix_mul.ipynb
+++ b/examples/matrix_mul.ipynb
@@ -53,40 +53,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 9.761416  10.490191   8.145116  ... 10.3075    10.047678   9.5863285]\n",
-      " [ 8.197842   7.701171   6.8938193 ...  8.309661   8.843424   7.8617306]\n",
-      " [ 8.767872  10.02171    7.4680467 ... 10.130726  10.054659   8.37555  ]\n",
+      "[[ 8.115925   9.018217   8.498305  ...  9.5552225 10.647078   8.421918 ]\n",
+      " [ 8.363902   9.556349   8.723376  ...  9.713012  10.854008   8.826418 ]\n",
+      " [ 7.2253046  7.6305404  8.297882  ...  8.948566   9.524342   7.5426407]\n",
       " ...\n",
-      " [ 8.796709   9.477808   8.055478  ...  9.640883   9.244491   8.604949 ]\n",
-      " [ 8.546173   7.5224905  6.8600464 ...  8.404159   8.166966   7.5622387]\n",
-      " [ 9.410881   9.870552   8.042708  ...  9.94305    9.937026   9.298895 ]]\n",
-      "[[ 9.761416  10.4901905  8.145117  ... 10.3075    10.047677   9.586329 ]\n",
-      " [ 8.197844   7.701171   6.89382   ...  8.30966    8.843424   7.8617315]\n",
-      " [ 8.767873  10.021709   7.4680476 ... 10.130726  10.054659   8.375549 ]\n",
+      " [ 8.691064   7.826514   7.8910794 ...  8.570975   9.986826   8.277089 ]\n",
+      " [ 6.776322   8.020783   7.640442  ...  8.135725   8.8330965  7.243946 ]\n",
+      " [ 8.037988   8.686603   9.1378975 ...  8.803139   9.75271    7.6073923]]\n",
+      "[[ 8.115925   9.018218   8.498305  ...  9.555222  10.647079   8.421916 ]\n",
+      " [ 8.363903   9.55635    8.723375  ...  9.713012  10.85401    8.82642  ]\n",
+      " [ 7.2253036  7.630541   8.297882  ...  8.948566   9.524342   7.5426407]\n",
       " ...\n",
-      " [ 8.796711   9.477809   8.055477  ...  9.640884   9.244492   8.60495  ]\n",
-      " [ 8.546173   7.522491   6.8600464 ...  8.404159   8.1669655  7.5622387]\n",
-      " [ 9.410881   9.870553   8.04271   ...  9.94305    9.937027   9.298896 ]]\n",
-      "[[ 0.0000000e+00  9.5367432e-07 -9.5367432e-07 ...  0.0000000e+00\n",
-      "   9.5367432e-07 -9.5367432e-07]\n",
-      " [-1.9073486e-06  0.0000000e+00 -4.7683716e-07 ...  9.5367432e-07\n",
-      "   0.0000000e+00 -9.5367432e-07]\n",
-      " [-9.5367432e-07  9.5367432e-07 -9.5367432e-07 ...  0.0000000e+00\n",
-      "   0.0000000e+00  9.5367432e-07]\n",
-      " ...\n",
-      " [-1.9073486e-06 -9.5367432e-07  9.5367432e-07 ... -9.5367432e-07\n",
-      "  -9.5367432e-07 -9.5367432e-07]\n",
-      " [ 0.0000000e+00 -4.7683716e-07  0.0000000e+00 ...  0.0000000e+00\n",
-      "   9.5367432e-07  0.0000000e+00]\n",
-      " [ 0.0000000e+00 -9.5367432e-07 -1.9073486e-06 ...  0.0000000e+00\n",
-      "  -9.5367432e-07 -9.5367432e-07]]\n"
+      " [ 8.691063   7.826514   7.891079  ...  8.570975   9.986824   8.27709  ]\n",
+      " [ 6.7763214  8.020784   7.640442  ...  8.135726   8.833097   7.243946 ]\n",
+      " [ 8.037989   8.686602   9.1378975 ...  8.80314    9.75271    7.6073914]]\n",
+      "Error: 6.690194e-08\n"
      ]
     }
    ],
@@ -105,7 +93,9 @@
     "\n",
     "print(Cnp)\n",
     "print(Cnp2)\n",
-    "print(Cnp - Cnp2)\n"
+    "\n",
+    "Cerror = np.linalg.norm(Cnp - Cnp2) / np.linalg.norm(Cnp2)\n",
+    "print(\"Error:\", Cerror)\n"
    ]
   },
   {
