--- a/examples/wave_simulation.ipynb
+++ b/examples/wave_simulation.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "TensorProgram:\n",
       "  Kernel count: 1\n",
       "  Intermediate buffers: 4\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,91 +71,91 @@
       "\n",
       "[m0,m1] int v4_0 = dim_id(data=[0], )\n",
       "[m0,m1] int v4_1 = dim_id(data=[1], )\n",
-      "[m0,m1] int v4_3 = sub(inputs=[v4_0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_5 = add(inputs=[v4_0,1], cost=1.000000)\n",
-      "[] int v4_7 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_9 = clamp(inputs=[v4_3,0,v4_7], cost=6.000000)\n",
+      "[m0,m1] int v4_3 = sub(inputs=[v4_0,v4_2(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_5 = add(inputs=[v4_0,v4_4(1)], cost=1.000000)\n",
+      "[] int v4_7 = sub(inputs=[m0,v4_6(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_9 = clamp(inputs=[v4_3,v4_8(0),v4_7], cost=6.000000)\n",
       "[m0,m1] int v4_10 = mul(inputs=[v4_9,m1], cost=7.000000)\n",
-      "[] int v4_12 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_14 = clamp(inputs=[v4_1,0,v4_12], cost=5.000000)\n",
+      "[] int v4_12 = sub(inputs=[m1,v4_11(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_14 = clamp(inputs=[v4_1,v4_13(0),v4_12], cost=5.000000)\n",
       "[m0,m1] int v4_15 = add(inputs=[v4_10,v4_14], cost=13.000000)\n",
       "[m0,m1] float v4_16 = load(memory=[m2], indices=[v4_15], cost=141.000000)\n",
-      "[] int v4_18 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_20 = clamp(inputs=[v4_5,0,v4_18], cost=6.000000)\n",
+      "[] int v4_18 = sub(inputs=[m0,v4_17(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_20 = clamp(inputs=[v4_5,v4_19(0),v4_18], cost=6.000000)\n",
       "[m0,m1] int v4_21 = mul(inputs=[v4_20,m1], cost=7.000000)\n",
-      "[] int v4_23 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_25 = clamp(inputs=[v4_1,0,v4_23], cost=5.000000)\n",
+      "[] int v4_23 = sub(inputs=[m1,v4_22(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_25 = clamp(inputs=[v4_1,v4_24(0),v4_23], cost=5.000000)\n",
       "[m0,m1] int v4_26 = add(inputs=[v4_21,v4_25], cost=13.000000)\n",
       "[m0,m1] float v4_27 = load(memory=[m2], indices=[v4_26], cost=141.000000)\n",
       "[m0,m1] float v4_28 = add(inputs=[v4_16,v4_27], cost=283.000000)\n",
-      "[m0,m1] int v4_30 = sub(inputs=[v4_1,1], cost=1.000000)\n",
-      "[] int v4_32 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_34 = clamp(inputs=[v4_0,0,v4_32], cost=5.000000)\n",
+      "[m0,m1] int v4_30 = sub(inputs=[v4_1,v4_29(1)], cost=1.000000)\n",
+      "[] int v4_32 = sub(inputs=[m0,v4_31(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_34 = clamp(inputs=[v4_0,v4_33(0),v4_32], cost=5.000000)\n",
       "[m0,m1] int v4_35 = mul(inputs=[v4_34,m1], cost=6.000000)\n",
-      "[] int v4_37 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_39 = clamp(inputs=[v4_30,0,v4_37], cost=6.000000)\n",
+      "[] int v4_37 = sub(inputs=[m1,v4_36(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_39 = clamp(inputs=[v4_30,v4_38(0),v4_37], cost=6.000000)\n",
       "[m0,m1] int v4_40 = add(inputs=[v4_35,v4_39], cost=13.000000)\n",
       "[m0,m1] float v4_41 = load(memory=[m2], indices=[v4_40], cost=141.000000)\n",
       "[m0,m1] float v4_42 = add(inputs=[v4_28,v4_41], cost=425.000000)\n",
-      "[m0,m1] int v4_44 = add(inputs=[v4_1,1], cost=1.000000)\n",
-      "[] int v4_46 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_48 = clamp(inputs=[v4_0,0,v4_46], cost=5.000000)\n",
+      "[m0,m1] int v4_44 = add(inputs=[v4_1,v4_43(1)], cost=1.000000)\n",
+      "[] int v4_46 = sub(inputs=[m0,v4_45(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_48 = clamp(inputs=[v4_0,v4_47(0),v4_46], cost=5.000000)\n",
       "[m0,m1] int v4_49 = mul(inputs=[v4_48,m1], cost=6.000000)\n",
-      "[] int v4_51 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_53 = clamp(inputs=[v4_44,0,v4_51], cost=6.000000)\n",
+      "[] int v4_51 = sub(inputs=[m1,v4_50(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_53 = clamp(inputs=[v4_44,v4_52(0),v4_51], cost=6.000000)\n",
       "[m0,m1] int v4_54 = add(inputs=[v4_49,v4_53], cost=13.000000)\n",
       "[m0,m1] float v4_55 = load(memory=[m2], indices=[v4_54], cost=141.000000)\n",
       "[m0,m1] float v4_56 = add(inputs=[v4_42,v4_55], cost=567.000000)\n",
-      "[] int v4_59 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_61 = clamp(inputs=[v4_0,0,v4_59], cost=5.000000)\n",
+      "[] int v4_59 = sub(inputs=[m0,v4_58(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_61 = clamp(inputs=[v4_0,v4_60(0),v4_59], cost=5.000000)\n",
       "[m0,m1] int v4_62 = mul(inputs=[v4_61,m1], cost=6.000000)\n",
-      "[] int v4_64 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_66 = clamp(inputs=[v4_1,0,v4_64], cost=5.000000)\n",
+      "[] int v4_64 = sub(inputs=[m1,v4_63(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_66 = clamp(inputs=[v4_1,v4_65(0),v4_64], cost=5.000000)\n",
       "[m0,m1] int v4_67 = add(inputs=[v4_62,v4_66], cost=12.000000)\n",
       "[m0,m1] float v4_68 = load(memory=[m2], indices=[v4_67], cost=140.000000)\n",
-      "[m0,m1] float v4_69 = mul(inputs=[4.000000f,v4_68], cost=141.000000)\n",
+      "[m0,m1] float v4_69 = mul(inputs=[v4_57(4.000000f),v4_68], cost=141.000000)\n",
       "[m0,m1] float v4_70 = sub(inputs=[v4_56,v4_69], cost=709.000000)\n",
-      "[] int v4_73 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_75 = clamp(inputs=[v4_0,0,v4_73], cost=5.000000)\n",
+      "[] int v4_73 = sub(inputs=[m0,v4_72(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_75 = clamp(inputs=[v4_0,v4_74(0),v4_73], cost=5.000000)\n",
       "[m0,m1] int v4_76 = mul(inputs=[v4_75,m1], cost=6.000000)\n",
-      "[] int v4_78 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_80 = clamp(inputs=[v4_1,0,v4_78], cost=5.000000)\n",
+      "[] int v4_78 = sub(inputs=[m1,v4_77(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_80 = clamp(inputs=[v4_1,v4_79(0),v4_78], cost=5.000000)\n",
       "[m0,m1] int v4_81 = add(inputs=[v4_76,v4_80], cost=12.000000)\n",
-      "[m0,m1] float v4_82 = load(memory=[m2], indices=[v4_81], cost=140.000000)\n",
-      "[m0,m1] float v4_83 = mul(inputs=[6.283185f,v4_82], cost=141.000000)\n",
+      "[] float v4_82 = load(memory=[m2], indices=[v4_81], cost=140.000000)\n",
+      "[m0,m1] float v4_83 = mul(inputs=[v4_71(6.283185f),v4_82], cost=141.000000)\n",
       "[m0,m1] float v4_84 = sin(inputs=[v4_83], cost=143.000000)\n",
-      "[m0,m1] float v4_86 = mul(inputs=[0.100000f,v4_84], cost=144.000000)\n",
+      "[m0,m1] float v4_86 = mul(inputs=[v4_85(0.100000f),v4_84], cost=144.000000)\n",
       "[m0,m1] float v4_87 = sub(inputs=[v4_70,v4_86], cost=854.000000)\n",
-      "[m0,m1] float v4_89 = mul(inputs=[0.200000f,v4_87], cost=855.000000)\n",
-      "[] int v4_91 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_93 = clamp(inputs=[v4_0,0,v4_91], cost=5.000000)\n",
+      "[m0,m1] float v4_89 = mul(inputs=[v4_88(0.200000f),v4_87], cost=855.000000)\n",
+      "[] int v4_91 = sub(inputs=[m0,v4_90(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_93 = clamp(inputs=[v4_0,v4_92(0),v4_91], cost=5.000000)\n",
       "[m0,m1] int v4_94 = mul(inputs=[v4_93,m1], cost=6.000000)\n",
-      "[] int v4_96 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_98 = clamp(inputs=[v4_1,0,v4_96], cost=5.000000)\n",
+      "[] int v4_96 = sub(inputs=[m1,v4_95(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_98 = clamp(inputs=[v4_1,v4_97(0),v4_96], cost=5.000000)\n",
       "[m0,m1] int v4_99 = add(inputs=[v4_94,v4_98], cost=12.000000)\n",
-      "[m0,m1] float v4_100 = load(memory=[m3], indices=[v4_99], cost=140.000000)\n",
+      "[] float v4_100 = load(memory=[m3], indices=[v4_99], cost=140.000000)\n",
       "[m0,m1] float v4_101 = add(inputs=[v4_100,v4_89], cost=996.000000)\n",
-      "[] int v4_103 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_105 = clamp(inputs=[v4_0,0,v4_103], cost=5.000000)\n",
+      "[] int v4_103 = sub(inputs=[m0,v4_102(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_105 = clamp(inputs=[v4_0,v4_104(0),v4_103], cost=5.000000)\n",
       "[m0,m1] int v4_106 = mul(inputs=[v4_105,m1], cost=6.000000)\n",
-      "[] int v4_108 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_110 = clamp(inputs=[v4_1,0,v4_108], cost=5.000000)\n",
+      "[] int v4_108 = sub(inputs=[m1,v4_107(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_110 = clamp(inputs=[v4_1,v4_109(0),v4_108], cost=5.000000)\n",
       "[m0,m1] int v4_111 = add(inputs=[v4_106,v4_110], cost=12.000000)\n",
       "[m0,m1] store(memory=[m4], inputs=[v4_101], indices=[v4_111], cost=1136.000000)\n",
-      "[m0,m1] float v4_114 = mul(inputs=[0.200000f,v4_101], cost=997.000000)\n",
-      "[] int v4_116 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_118 = clamp(inputs=[v4_0,0,v4_116], cost=5.000000)\n",
+      "[m0,m1] float v4_114 = mul(inputs=[v4_113(0.200000f),v4_101], cost=997.000000)\n",
+      "[] int v4_116 = sub(inputs=[m0,v4_115(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_118 = clamp(inputs=[v4_0,v4_117(0),v4_116], cost=5.000000)\n",
       "[m0,m1] int v4_119 = mul(inputs=[v4_118,m1], cost=6.000000)\n",
-      "[] int v4_121 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_123 = clamp(inputs=[v4_1,0,v4_121], cost=5.000000)\n",
+      "[] int v4_121 = sub(inputs=[m1,v4_120(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_123 = clamp(inputs=[v4_1,v4_122(0),v4_121], cost=5.000000)\n",
       "[m0,m1] int v4_124 = add(inputs=[v4_119,v4_123], cost=12.000000)\n",
-      "[m0,m1] float v4_125 = load(memory=[m2], indices=[v4_124], cost=140.000000)\n",
+      "[] float v4_125 = load(memory=[m2], indices=[v4_124], cost=140.000000)\n",
       "[m0,m1] float v4_126 = add(inputs=[v4_125,v4_114], cost=1138.000000)\n",
-      "[] int v4_128 = sub(inputs=[m0,1], cost=1.000000)\n",
-      "[m0,m1] int v4_130 = clamp(inputs=[v4_0,0,v4_128], cost=5.000000)\n",
+      "[] int v4_128 = sub(inputs=[m0,v4_127(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_130 = clamp(inputs=[v4_0,v4_129(0),v4_128], cost=5.000000)\n",
       "[m0,m1] int v4_131 = mul(inputs=[v4_130,m1], cost=6.000000)\n",
-      "[] int v4_133 = sub(inputs=[m1,1], cost=1.000000)\n",
-      "[m0,m1] int v4_135 = clamp(inputs=[v4_1,0,v4_133], cost=5.000000)\n",
+      "[] int v4_133 = sub(inputs=[m1,v4_132(1)], cost=1.000000)\n",
+      "[m0,m1] int v4_135 = clamp(inputs=[v4_1,v4_134(0),v4_133], cost=5.000000)\n",
       "[m0,m1] int v4_136 = add(inputs=[v4_131,v4_135], cost=12.000000)\n",
       "[m0,m1] store(memory=[m5], inputs=[v4_126], indices=[v4_136], cost=1278.000000)\n",
       "\n"
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -175,16 +176,16 @@
      "output_type": "stream",
      "text": [
       "Used memory: 262144\n",
-      "Iterations per second: 3846.7854063869986\n",
-      "Iterations per second: 6666.726006930095\n",
-      "Iterations per second: 7142.036882524222\n",
-      "Iterations per second: 5882.861831493611\n",
-      "Iterations per second: 3703.6450974851655\n",
-      "Iterations per second: 4761.979586507567\n",
+      "Iterations per second: 1086.9789669005982\n",
       "Iterations per second: 7692.441999082989\n",
-      "Iterations per second: 8333.275053643805\n",
-      "Iterations per second: 8333.771781676569\n",
-      "Iterations per second: 8332.943934517423\n",
+      "Iterations per second: 8333.10949079133\n",
+      "Iterations per second: 6666.726006930095\n",
+      "Iterations per second: 6666.726006930095\n",
+      "Iterations per second: 8332.778384821695\n",
+      "Iterations per second: 6250.266742169106\n",
+      "Iterations per second: 9090.976873225394\n",
+      "Iterations per second: 5882.366800835869\n",
+      "Iterations per second: 7692.441999082989\n",
       "Used memory: 262146\n"
      ]
     }
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +250,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
