Working on linux

--- a/examples/mandelbrot.ipynb
+++ b/examples/mandelbrot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,33 @@
      "output_type": "stream",
      "text": [
       "TensorFrost module loaded!\n",
-      "TensorProgram:\n",
-      "  Kernel count: 2\n",
-      "  Intermediate buffers: 1\n",
-      "  Lines of generated code: 194\n",
-      "  IR size: 532\n",
-      "\n",
-      "(2048, 2048, 3)\n"
+      "Temp file: /tmp/mytempOHG5Pa\n",
+      "Source path: /tmp/generated_lib.cpp\n",
+      "Compile options: /O2 /fp:fast /openmp\n",
+      "Command: g++ /O2 /fp:fast /openmp -shared -fPIC /tmp/generated_lib.cpp -o /tmp/mytempOHG5Pa\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/generated_lib.cpp:102:22: error: expected constructor, destructor, or type conversion before ‘(’ token\n",
+      "  102 | extern \"C\" __declspec(dllexport) void kernel_0(uint* var, uint* off, uint* mem, uint* shape)\n",
+      "      |                      ^\n",
+      "/tmp/generated_lib.cpp:114:22: error: expected constructor, destructor, or type conversion before ‘(’ token\n",
+      "  114 | extern \"C\" __declspec(dllexport) void kernel_1(uint* var, uint* off, uint* mem, uint* shape)\n",
+      "      |                      ^\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Compiler error: compiler exited with non-zero exit code (Error code: 256)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 32\u001b[0m\n\u001b[1;32m     28\u001b[0m     canvas[i, j, \u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m=\u001b[39m z_mag\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [canvas]\n\u001b[0;32m---> 32\u001b[0m mand \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmandelbrot\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     33\u001b[0m res \u001b[38;5;241m=\u001b[39m mand()\n\u001b[1;32m     34\u001b[0m resnp \u001b[38;5;241m=\u001b[39m res[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mnumpy\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Compiler error: compiler exited with non-zero exit code (Error code: 256)"
      ]
     }
    ],
@@ -26,7 +46,7 @@
     "import matplotlib.pyplot as plt\n",
     "import time\n",
     "\n",
-    "tf.initialize(tf.cpu, \"/O2 /fp:fast /openmp\")\n",
+    "tf.initialize(tf.cpu, \"-O2 -ffast-math -fopenmp\")\n",
     "\n",
     "S = 2048\n",
     "\n",
@@ -98,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
