testing loop matmul

--- a/examples/matrix_mul.ipynb
+++ b/examples/matrix_mul.ipynb
@@ -9,13 +9,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
-      "TensorProgram:\n",
-      "  Kernel count: 3\n",
-      "  Intermediate buffers: 5\n",
-      "  Lines of generated code: 137\n",
-      "  IR size: 82\n",
-      "\n"
+      "TensorFrost module loaded!\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -39,13 +41,25 @@
     "    N, M = A.shape\n",
     "    B = tf.input([M, -1], tf.float32)\n",
     "    K = B.shape[1]\n",
-    "\n",
+    "        \n",
     "    Bt = transpose(B)\n",
-    "\n",
-    "    C = tf.zeros([N, K])\n",
-    "    i, j, k = tf.indices([N, K, M])\n",
-    "    tf.scatterAdd(C[i, j], A[i, k] * Bt[j, k])\n",
-    "\n",
+    "        \n",
+    "    #C = tf.zeros([N, K])\n",
+    "    #i, j, k = tf.indices([N, K, M])\n",
+    "    #tf.scatterAdd(C[i, j], A[i, k] * Bt[j, k])\n",
+    "        \n",
+    "    C = tf.buffer([N, K])\n",
+    "        \n",
+    "    i, j = C.indices\n",
+    "        \n",
+    "    s = tf.zeros([N, K], tf.float32)\n",
+    "    def loop_body(k):\n",
+    "        s.set(s + A[i, k] * Bt[j, k])\n",
+    "         \n",
+    "    tf.loop(loop_body, 0, M, 1)\n",
+    "        \n",
+    "    C[i, j] = s\n",
+    "        \n",
     "    return [C]\n",
     "\n",
     "mmul = tf.compile(matmul)"
